# nrf52840-mdk-freertos

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
